<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.way.heard.ui.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="36dip"
        android:layout_height="36dip"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="40dip"
                android:src="@drawable/ic_heard_capital" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_login_sign_up"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dip"
                            android:layout_height="36dip"
                            android:layout_weight="1"
                            android:background="@drawable/backgroud_button_sign_up"
                            android:gravity="center"
                            android:text="@string/action_sign_up"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_login_sign_in"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dip"
                            android:layout_height="36dip"
                            android:layout_weight="1"
                            android:background="@drawable/backgroud_button_sign_in"
                            android:gravity="center"
                            android:text="@string/action_sign_in"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/forget"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Forget Password?"
                        android:padding="@dimen/bullet_gap_width"
                        android:background="@drawable/tag_background"
                        android:textSize="12sp"
                        android:typeface="monospace" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
